--- a/roles/oh-my-zsh/tasks/copy_zshrc_file.yml
+++ b/roles/oh-my-zsh/tasks/copy_zshrc_file.yml
@@ -4,5 +4,5 @@
     src: zshrc.j2
     dest: '{{ home }}/.zshrc'
     # backup: yes
-  notify: 
-    - source zshrc file
+  # notify: 
+  #   - source zshrc file
